--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Universit&agrave; degli Studi di Milano - Bicocca">
 	
-	<title>{{ "LAYOUT.TITLE" | translate }}</title>
+	<title>Melinda Project Survey</title>
 	
 <link rel="stylesheet" href="styles.515ba3586e0b189f355f.css"></head>
 
@@ -39,5 +39,5 @@
 		</div>
 	</footer>
 	
-<script src="runtime.465c2333d355155ec5f3.js"></script><script src="polyfills-es5.ad0cd9ec34ac503f8b75.js" nomodule></script><script src="polyfills.ba902a6257b4f38ca5e0.js"></script><script src="scripts.ba200ba566ec6d292b49.js"></script><script src="main.753a5b0aa2907bf56fe0.js"></script></body>
+<script src="runtime.465c2333d355155ec5f3.js"></script><script src="polyfills-es5.ad0cd9ec34ac503f8b75.js" nomodule></script><script src="polyfills.ba902a6257b4f38ca5e0.js"></script><script src="scripts.ba200ba566ec6d292b49.js"></script><script src="main.a6bd6d49ce8e7c72577b.js"></script></body>
 </html>
