--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Universit&agrave; degli Studi di Milano - Bicocca">
 	
+	<meta property="og:title" content="Melinda project survey" />
+	<meta property="og:type" content="website" />
+	<meta property="og:image" content="assets/img/melinda-project-logo-small.jpg" />
+	
 	<title>Melinda Project Survey</title>
 	
 <link rel="stylesheet" href="styles.8ffcb5756010229595b2.css"></head>
@@ -13,5 +17,5 @@
 	
 	<app-root></app-root>
 	
-<script src="runtime.465c2333d355155ec5f3.js"></script><script src="polyfills-es5.ad0cd9ec34ac503f8b75.js" nomodule></script><script src="polyfills.ba902a6257b4f38ca5e0.js"></script><script src="scripts.6ee986b7cd7aefa6baef.js"></script><script src="main.178c44b84982d1c4baf3.js"></script></body>
+<script src="runtime.465c2333d355155ec5f3.js"></script><script src="polyfills-es5.ad0cd9ec34ac503f8b75.js" nomodule></script><script src="polyfills.ba902a6257b4f38ca5e0.js"></script><script src="scripts.6ee986b7cd7aefa6baef.js"></script><script src="main.4ebf9f31c73ff48616ff.js"></script></body>
 </html>
