--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta property="og:title" content="Melinda project survey" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="assets/img/melinda-project-logo-small.jpg" />
+	<meta property="og:image:width" content="200" />
+	<meta property="og:image:height" content="91" />
 	
 	<title>Melinda Project Survey</title>
 	
